src/objects/Custom_Notification__mdt.object
<CustomObject>
    <description>Used for storing notification metadata for informing NPSP users</description>
    <label>Custom Notification</label>
    <pluralLabel>Custom Notifications</pluralLabel>
    <fields>
        <fullName>Audience_Implementation__c</fullName>
        <label>Audience Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Channel__c</fullName>
        <label>Notification Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Content_Implementation__c</fullName>
        <label>Notification Content Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <description>Redirect url for notification</description>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>